postgres: make the row-comparison cursor boundary the only one
The measurement came back decisive, so the switch goes with it.

On a 100.000-event corpus with the cursor at the midpoint, one page of 500:
the expansion used the index for the stream columns and then discarded every
event before the cursor to reach page one -- Rows Removed by Filter: 27500,
1295 buffers, 3.344ms -- where the row comparison starts the scan at the cursor
with nothing filtered, 27 buffers, 0.165ms. Its cost is proportional to how
deep the cursor already sits rather than to the page size, which is the wrong
shape for the way Projector pages, and it grows silently because every result
is correct.

End to end: query-cursor-walk 0.057 -> 0.166 ops/ms (2.9x), replay-batches
0.040 -> 0.082 (2.0x), with query-stream-page and append-none -- the shapes
carrying no boundary -- flat at 1.04x and 1.01x. That pair of controls is what
says the difference is the boundary and not the machine.

It also improves the plans the server caches for the DCB check, which is not
what it was for: the generic plan for the canonical type+tag check was a
whole-table sequential scan (19.5ms, 100.008 rows discarded for a row that is
not there) and is now an index scan (0.23ms). The or-groups cliff is
unaffected -- that one is the tag disjunction, not the cursor.

So there is no setting. The two spellings are semantically identical, so no
deployment can want the slower one, and a knob whose right value is the same
everywhere is an unmade decision left in the code. Gone: CursorBoundaryForm and
its system property, the TargetSpec dimension, the per-form plan capture, and
the cursor-boundary-form profile, which cannot compare two things when only one
is left.

What stays is the guard. PostgresCursorBoundaryTest asserts per backend (16, 17,
18) that the boundary reaches the Index Cond with no BitmapOr and no Sort above
the scan -- because the expansion is what anyone rewriting this would naturally
reach for, and nothing else